Extra CSS to stop issue on iphone

--- a/local-buzz/src/Components/HomePage/HomePage.css
+++ b/local-buzz/src/Components/HomePage/HomePage.css
@@ -36,9 +36,9 @@
 	width: 25vw;
 	transition: transform 0.2s ease;
 	/* POSSIBLE EXTRA CSS TO KEEP BUTTON TEXT ON ONE LINE */
-	/* white-space: nowrap;
+	white-space: nowrap;
     overflow: hidden;
-    text-overflow: ellipsis; */
+    text-overflow: ellipsis;
 }
 
 .map-view:hover {
