--- a/local-buzz/src/Components/LandingPage/LandingPage.css
+++ b/local-buzz/src/Components/LandingPage/LandingPage.css
@@ -23,9 +23,9 @@
 	transition: transform 0.2s ease;
 	box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.75);
 	/*POSSIBLE EXTRA CSS TO KEEP BUTTON TEXT ON ONE LINE*/
-	/* white-space:nowrap;
+	white-space:nowrap;
    overflow:hidden;
-text-overflow:ellipsis; */
+text-overflow:ellipsis;
 }
 
 @media (min-width: 768px) and (max-width: 1200px) {
